--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
    <title>Popup Web</title>
 </head>
 <body>
-   <div class="contaner">
+   <div class="container mt-5">
       <div class="row">
          <div class="col-6">
-            <h1>Wellcome to this page</h1>
+            <h1 class="mb-4">Wellcome to this page</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores facere nobis reiciendis explicabo fuga perferendis eius. Fugit, repellat aperiam. Pariatur, quis iusto. Unde eaque alias eos incidunt, earum laborum?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores facere nobis reiciendis explicabo fuga perferendis eius. Fugit, repellat aperiam. Pariatur, quis iusto. Unde eaque alias eos incidunt, earum laborum?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores facere nobis reiciendis explicabo fuga perferendis eius. Fugit, repellat aperiam. Pariatur, quis iusto. Unde eaque alias eos incidunt, earum laborum?</p>
+            <img class="img2" src="https://img3.akspic.ru/crops/9/5/9/5/85959/85959-vecher-avtomobil-trafik-empajr_stejt_bilding-doroga-3840x2160.jpg" alt="">
          </div>
          <div class="col-6">
-            <img src="https://img3.akspic.ru/previews/8/3/3/8/6/168338/168338-nyujork-ulice_nyu_jorka-ulica-manhetten-zdanie-500x.jpg" alt="img">
+            <img class="img1" src="https://img3.akspic.ru/previews/8/3/3/8/6/168338/168338-nyujork-ulice_nyu_jorka-ulica-manhetten-zdanie-500x.jpg" alt="img">
          </div>
       </div>
    </div>
