--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    <div id="popup" class="popup">
       <div class="popup__body">
          <div class="popup__content">
-            <a href="" class="popup__close"></a>
+            <a href="" class="popup__close">X</a>
             <div class="popup__tittle">Это модальное окно №1</div>
             <div class="popup__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque expedita doloremque alias voluptate sint animi, sunt delectus inventore iste repudiandae debitis ea fugit consequuntur! Repudiandae porro sed cumque quos deserunt.</div>
          </div>
