--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
    <title>Popup Web</title>
 </head>
 <body>
+   <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <div class="container">
+         <a class="navbar-brand" href="#">
+            <img class="logo" title="Homepage" src="https://media.keyshot.com/uploads/2018/10/keyshot-icon-256.png" alt="Logo">
+         </a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+         <ul class="navbar-nav">
+            <li class="nav-item active">
+               <a class="nav-link" title="Homepage" href="#">Home</a>
+            </li>
+            <li class="nav-item hover">
+               <a class="nav-link" title="My portfolio" href="#">My portfolio</a>
+            </li>
+            <li class="nav-item hover">
+               <a class="nav-link" title="About me" href="#">About me</a>
+            </li>
+            <li class="nav-item hover">
+               <a class="nav-link" title="Contacts" href="#">Popup</a>
+            </li>
+         </ul>
+         </div>
+         </div>
+      </nav>
+   </header>
    <div class="container mt-5">
       <div class="row">
          <div class="col-6">
