Create popup js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <a class="nav-link" title="About me" href="#">About me</a>
             </li>
             <li class="nav-item hover">
-               <a class="nav-link" title="Contacts" href="#popup">Popup</a>
+               <a class="nav-link popup-link" title="Contacts" href="#popup">Popup</a>
             </li>
          </ul>
          </div>
@@ -53,19 +53,19 @@
             <img class="img2" src="https://img3.akspic.ru/crops/9/5/9/5/85959/85959-vecher-avtomobil-trafik-empajr_stejt_bilding-doroga-3840x2160.jpg" alt="">
          </div>
          <div class="col-6">
-            <img class="img1" src="https://img3.akspic.ru/previews/8/3/3/8/6/168338/168338-nyujork-ulice_nyu_jorka-ulica-manhetten-zdanie-500x.jpg" alt="img">
+            <img class="img1 popup-link" src="https://img3.akspic.ru/previews/8/3/3/8/6/168338/168338-nyujork-ulice_nyu_jorka-ulica-manhetten-zdanie-500x.jpg" alt="img">
          </div>
       </div>
    </div>
    <div id="popup" class="popup">
-      <a href="#header" class="popup-area"></a>
       <div class="popup__body">
          <div class="popup__content">
-            <a href="#header" class="popup__close">X</a>
+            <a href="#header" class="popup__close close-popup">X</a>
             <div class="popup__tittle">Это модальное окно №1</div>
             <div class="popup__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque expedita doloremque alias voluptate sint animi, sunt delectus inventore iste repudiandae debitis ea fugit consequuntur! Repudiandae porro sed cumque quos deserunt.</div>
          </div>
       </div>
    </div>
+   <script src="popup.js"></script>
 </body>
 </html>
