--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
          </div>
       </div>
    </div>
+   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+   crossorigin="anonymous">
+   </script>
    <script src="popup.js"></script>
 </body>
 </html>
