Work with gallery

--- a/gallery.html
+++ b/gallery.html
@@ -41,11 +41,19 @@
          </a>
       </div>
    </section>
-   <script src=""></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
    crossorigin="anonymous">
    </script>
-   <script src="popup.js"></script>
+   <script>
+      $(".gallery-list").magnificPopup({
+         delegate: "a",
+         type: "image",
+         gallery: {
+         enabled: true
+         }
+      });
+   </script>
 </body>
 </html>
