--- a/gallery.html
+++ b/gallery.html
@@ -41,19 +41,18 @@
          </a>
       </div>
    </section>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
-   crossorigin="anonymous">
-   </script>
-   <script>
-      $(".gallery-list").magnificPopup({
-         delegate: "a",
-         type: "image",
-         gallery: {
-         enabled: true
-         }
-      });
-   </script>
+
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+   crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
+<script>
+   $(".gallery-list").magnificPopup({
+   delegate: "a",
+   type: "image",
+   gallery: {
+   enabled: true
+   }
+});
+</script>
 </body>
 </html>
