--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                <a class="nav-link" title="Homepage" href="#">Home</a>
             </li>
             <li class="nav-item hover">
-               <a class="nav-link" title="My portfolio" href="#">My portfolio</a>
+               <a class="nav-link" title="My portfolio" href="gallery.html">My portfolio</a>
             </li>
             <li class="nav-item hover">
                <a class="nav-link" title="About me" href="#">About me</a>
