--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
    <link rel="stylesheet" href="style.css" />
-   <title>Popup Web</title>
+   <title>Web</title>
 </head>
 <body>
    <header>
@@ -57,6 +57,14 @@
             <img class="img1 popup-link" src="https://img3.akspic.ru/previews/8/3/3/8/6/168338/168338-nyujork-ulice_nyu_jorka-ulica-manhetten-zdanie-500x.jpg" alt="img">
          </div>
       </div>
+   </div>
+   <div class="container marathon">
+      <h1><strong>Марафон</strong></h1>
+      <br>
+      <a href=""><p>Задание 1</p></a>
+      <a href=""><p>Задание 2</p></a>
+      <a href=""><p>Задание 3</p></a>
+      <a href=""><p>Задание 4</p></a>
    </div>
    <div id="popup" class="popup">
       <div class="popup__body">
