Created style-lesson1 css

--- a/lesson1.html
+++ b/lesson1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="style-lesson1.css">
    <title>Карточки | Проект 1</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
    </div>
    <div class="container">
       <div 
-      class="slide" 
+      class="slide active" 
       style="background-image: url('https://images.unsplash.com/photo-1560743173-567a3b5658b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');">
          <h3>Dogs</h3>
       </div>
