Created my-lesson1 html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <div class="container marathon">
       <h1><strong>Марафон</strong></h1>
       <br>
-      <a href="lesson1.html"><p>Задание 1 Галерея из карточек</p></a>
+      <a href="my-lesson1.html"><p>Задание 1 Галерея из карточек</p></a>
       <a href=""><p>Задание 2</p></a>
       <a href=""><p>Задание 3</p></a>
       <a href=""><p>Задание 4</p></a>
