--- a/my-lesson1.html
+++ b/my-lesson1.html
@@ -47,6 +47,6 @@
    <h3>Guinea pig</h3>
 </div>
 </div>
-<script src="app.js"></script>
+<script src="app-my-lesson1.js"></script>
 </body>
 </html>
